# cryptologik

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
analyzers/: __init__.py  cert_expiry.py  tls_analyzer.py
analyzers/migration_prioritization/: __init__.py  planner.py
analyzers/pqc_readiness/: __init__.py  readiness_assessor.py
analyzers/risk_modeling/: __init__.py  crypto_agility_assessor.py
blockchain/: __init__.py
blockchain/custody/: custody_security_guide.md
blockchain/smart_contracts/: __init__.py  analyzer.py  cvss_risk.py  review_checklist.py  swc_extended.py  unsafe_patterns.py
blockchain/swc_mappings/: swc_reference.yaml
blockchain/wallets/: wallet_posture_checklist.md
cli/: main.py
crypto/: __init__.py  asymmetric_key_analyzer.py  cipher_suite_analyzer.py  ct_abuse_detector.py  hashing_policy_analyzer.py  jwt_attack_detector.py  password_policy_analyzer.py  rng_security_analyzer.py  tls_chain_validator.py
crypto/antipatterns/: detector.py
cryptologik/: certificate.py  cli.py  logging.py  tls_scanner.py
cryptologik_cli/: __init__.py  main.py  tls_utils.py
docs/: blockchain-security-model.md  crypto-agility-model.md  crypto-security-model.md  overview.md  post-quantum-model.md
policies/: ci_crypto_baseline.yaml
reports/: __init__.py  report_generator.py
schemas/: __init__.py  advanced_assessment.py  crypto_finding.py  findings.schema.json
tests/: conftest.py  test_antipatterns.py  test_asymmetric_key_analyzer.py  test_cert_expiry.py  test_cert_expiry_directory_scan.py  test_cert_expiry_encrypted_skip.py  test_cert_expiry_fail_on.py  test_cert_expiry_input_file.py  test_cert_expiry_json.py  test_cert_expiry_json_output.py  test_cert_expiry_output_file.py  test_cipher_suite_analyzer.py  test_cli_advanced_assessments.py  test_cli_contract_checklist.py  test_cli_crypto_config.py  test_cli_exit_codes.py  test_cli_fail_on_threshold.py  test_cli_generate_report.py  test_cli_key_posture.py  test_cli_legacy_shim.py  test_cli_output_writes.py  test_cli_tls_config.py  test_config_validator.py  test_contract_scan_fail_on.py  test_contract_scan_format.py  test_contract_scan_input_list.py  test_contract_scan_json_output.py  test_contract_scan_sarif.py  test_contract_scan_stdin.py  test_contract_scan_stdin_language.py  test_crypto_agility_assessor.py  test_crypto_cycle10.py  test_ct_abuse_detector.py  test_cvss_risk.py  test_findings_schema.py  test_hardcoded_key_detection.py  test_hashing_policy_analyzer.py  test_jwt_attack_detector.py  test_key_rotation_max_age.py  test_migration_planner.py  (+19 more)
(+19 files in other folders)
